--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Abacha</title>
 </head>
 <body>
-    
+    <header>
+        <div class="nav-bar">
+            <span></span>
+            <img class="nav-logo" src="img/logo.png" alt="Logo">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span>
+                <a  href="#">Description</a>
+            </span>
+            <span>
+                <a  href="#">Ingreients</a>
+            </span>
+            <span>
+                <a   href="#">Prepare Now</a>
+            </span>
+            <span></span>
+        </div>
+    </header>
+    <main>
+        <div>
+            <img class="main-image" src="img/african-salad.jpg" alt="">
+        </div>
+    </main>
 </body>
 </html>
