--- a/index.html
+++ b/index.html
@@ -28,8 +28,39 @@
         </div>
     </header>
     <main>
-        <div>
+        <div class="main">
             <img class="main-image" src="img/african-salad.jpg" alt="">
+            <div class="main-image-bottom" ></div>
+            <div class="main-text">
+                <h1>About The Dish</h1>
+                <p>
+                    African Salad (locally known as Abacha) is one of the meals that mostly prepared and enjoyed by the Ibo speaking people of Nigeria. Its native taste is so distinctive, making it a delicacy to be enjoyed by all. It is usually served as a side dish in special events such as traditional weddings, burial ceremonies, anniversaries or the visit of a special guest. It is best served with Palm wine, a local drink tapped from special palm trees, but you can also enjoy it with any chilled drink of choice.
+                </p>
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>300g Abacha (dried shredded cassava)</li>
+                    <li>100g Ugba(Ukpaka) </li>
+                    <li>200ml Palm Oil</li>
+                    <li>2 tablespoonful of pounded Crayfish</li>
+                    <li>1 teaspoonful of smoothly grounded Potash</li>
+                    <li>1 Cube of Seasoning</li>
+                    <li>1 large (or 2 small) Onions</li>
+                    <li>Chilli Pepper/ any hot pepper (to taste) Salt</li>
+                    <li>100g of finely chopped Garden Egg leaves.</li>
+                    <li>Boiled Dried fish or Stockfish</li>
+                </ul>
+            </div>
+            <div class="prepare">
+                <h1>How To Prepare</h1>
+                <iframe class="video" title="Abacha Prep Video" src="https://www.youtube.com/embed/0bojPYzHvY8" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="main-footer">
+                <h1>Suscribe for more recipies!</h1>
+                <form action="">
+                    <input type="email" name="" id="" placeholder="Enter Your Email">
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
         </div>
     </main>
 </body>
